# serpentine

./: .ghci  .gitignore  README  serpentine.cabal  stack.yaml
example/: main.hs
src/: Serpentine.hs
src/Serpentine/: Crud.hs  PathPiece.hs  Playground.hs  Try.hs
