name:                serpentine
version:             0.2
synopsis:            Haskell routes using dependent types
description:         Please see README.markdown
homepage:            https://github.com/andrewthad/serpentine#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Serpentine
    Serpentine.Crud
    Serpentine.PathPiece
    Serpentine.Playground
    Serpentine.Try
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , text
    , singletons
    , template-haskell
    , vinyl
    , pringletons

executable example
  hs-source-dirs:      example
  main-is:             main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , serpentine
    , text
    , singletons
